<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ChoiceActivity"
    android:background="@drawable/background" >

    <Button
        android:id="@+id/easyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/mediumButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="76dp"
        android:text="@string/EasyMode"
        android:onClick="NewGame" />

    <TextView
        android:id="@+id/ChoiceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/easyButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"
        android:text="@string/Choice_Title" />

    <Button
        android:id="@+id/mediumButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:text="@string/MediumMode"
        android:onClick="NewGame" />

    <TextView
        android:id="@+id/PauseTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/Version" />

    <Button
        android:id="@+id/ReturnTitle"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/PauseTest"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/mediumButton"
        android:text="@string/ReturnTitle"
        android:onClick="returnTitle" />

    <Button
        android:id="@+id/hardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/easyButton"
        android:layout_below="@+id/easyButton"
        android:layout_marginTop="26dp"
        android:onClick="NewGame"
        android:text="@string/HardMode" />

</RelativeLayout>
