<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/background" >

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:text="@string/Game_Title"
        android:textSize="50sp" />

    <Button
        android:id="@+id/Indroduce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/StartGame"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:onClick="showIndroduce"
        android:text="@string/Game_Indroduce" />

    <TextView
        android:id="@+id/Notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/Version" />

    <Button
        android:id="@+id/StartGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Indroduce"
        android:layout_below="@+id/Title"
        android:layout_marginTop="45dp"
        android:onClick="startGame"
        android:text="@string/Start_Game" />

    <Button
        android:id="@+id/ExitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Indroduce"
        android:layout_alignRight="@+id/Indroduce"
        android:layout_below="@+id/Indroduce"
        android:layout_marginTop="26dp"
        android:text="@string/Exit"
        android:onClick="EndGame" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="Setting" />

</RelativeLayout>